Colocando versão em ingles do povo brasileiro e adicionando vanessa

--- a/portfolio-povo-brasileiro-en.html
+++ b/portfolio-povo-brasileiro-en.html
@@ -151,7 +151,7 @@
 					<div class="title-holder">
 						<span class="title">POVO BRASILEIRO: CANTOS DO NORDESTE</span>
 						<!--<span class="subtitle">Pellentesque habitant morbi tristique senectus et netus et malesuada fames .</span>
-						-->
+						<a href="portfolio.html" class="link-button"><span>GO BACK TO PORTFOLIO</span></a>-->
 						<div style="float: right; margin-top: 30px; margin-right: 15px;">
 						<a href="portfolio-povo-brasileiro.html">
 							<img src="img/icons/br-icon.png" alt="Versão em Português Brasileiro" title="Versão em Português Brasileiro" />
@@ -189,13 +189,12 @@
 
 							<div class="portfolio-sidebar">
 								<ul>
-									<li><a href="#projeto">O Espetáculo</a></li>
+									<li><a href="#projeto">The Musical</a></li>
 									<!--<li><a href="#datas">Datas</a></li>-->
-									<li><a href="#grupos">Os Grupos</a></li>
-									<li><a href="#agradecimentos">Agradecimentos</a></li>
-									<li><a href="#ficha-tecnica">Ficha Técnica</a></li>
-									<li><a href="#galeria">Galeria</a></li>
-									<li><a href="#clipagem">Clipagem</a></li>
+									<li><a href="#grupos">The Ensembles</a></li>
+									<li><a href="#ficha-tecnica">Production Staff</a></li>
+									<li><a href="#galeria">Gallery</a></li>
+									<li><a href="#clipagem">Clipping</a></li>
 								</ul>
 							</div>
 
@@ -204,167 +203,67 @@
 
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/C_5tuwT0iUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 								<br><br>
-								<div id="projeto" class="name">O Espetáculo</div>
+								<div id="projeto" class="name">The Musical</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
 								<div class="portfolio-text">
-									<!--<p>O FUNCULTURA apresenta <br>
-										Contracantos & Contraventos em <br>
-										POVO BRASILEIRO: CANTOS DO NORDESTE</p>-->
-									<!--<p>Contracantos e Contraventos apresentam o espetáculo Povo Brasileiro: Cantos do Nordeste para o público brasileiro e francês. A concepção do espetáculo, baseada em pesquisa e elaboração de repertório coral, procurou levantar peças musicais influenciadas pelas três grandes matrizes formadoras da cultura brasileira: a africana, a indígena e a europeia.
-									</p>
-									<p>Pernambuco, estado do Nordeste do Brasil, é um dos maiores celeiros de manifestações culturais de tradição oral. Do maracatu ao frevo, passando pelo bumba-meu-boi, caboclinhos, ciranda, cordel, coco, e pelos ideais de Ariano Suassuna – criador do movimento armorial -, retiramos os versos, as cores, as melodias, os ritmos e as harmonias para compartilhar um pouco de nossa cultura.
-									</p>
-									<p>A presença da tradição religiosa e dos brincantes encontrados nas manifestações nordestinas, inspirou a elaboração de cenas que remetem ao sertão e às praias. O espetáculo se inicia com um frevo de bloco, caminha pela beleza exótica das paisagens do sertão, mergulha nas canções e danças das mornas águas de nosso litoral, carrega a energia da pulsação do ritmo africano e retorna à alegria do frevo e do carnaval de Recife, sem esquecer da sonoridade peculiar dos pífanos, da melancolia dos aboios e dos versos rimados dos cordéis, tão característicos.
-									</p>
-									<p>O repertório que será apresentado transita entre o erudito e o popular e traz obras musicais de importantes compositores pernambucanos. Destacam-se os arranjos e composições de integrantes dos grupos, como a suíte Afro Brasileira com arranjo de Lucia Helena Cysneiros e as peças instrumentais de Edson Pedro e Carlos Silva.
-									</p>
-									<p>O espetáculo Povo Brasileiro: Cantos do Nordeste está sendo realizado graças ao patrocínio da FUNDARPE (Fundação do Patrimônio Histórico e Artístico de Pernambuco), órgão da Secretaria Estadual de Cultura que tem como objetivo principal a promoção e a preservação das identidades e produções culturais de Pernambuco. Através do edital FUNCULTURA são premiados anualmente projetos de excelência artística que são montados e apresentados no Brasil e no exterior.
-									</p>
-									-->
-									<p>POVO BRASILEIRO: CANTOS DO NORDESTE é um
-									concerto musical com elementos teatrais que apresenta a cultura
-									brasileira através de um repertório com peças nordestinas
-									valorizando as diferentes matrizes da formação de nosso povo. O
-									concerto incorpora música vocal e instrumental, aliada a
-									elementos da poesia de cordel, gestos sonoros e ritmos
-									pernambucanos. O programa é baseado em obras musicais de
-									tradição oral: aboios, toadas de maracatu, cirandas, coco,
-									caboclinho e frevo, entre outros.</p>
-
-									<p>O espetáculo é dividido em quatro momentos: O Nordeste
-									Armorial, Cantos da Praia, Cantos Afro-brasileiros e o Carnaval
-									pernambucano. POVO BRASILEIRO: CANTOS DO
-									NORDESTE esboça um retrato do Brasil, utilizando elementos da
-									cultura religiosa popular a elementos dos brincantes nordestinos.
-									A preparação do espetáculo busca a utilização do corpo de
-									forma integral, realizando uma pesquisa de gestos sonoros
-									(palmas, estalos de dedos, batidas de pés, sons guturais, entre
-									outros) e procurando aliar movimentos corporais, recursos cênicos
-									e danças às peças musicais. A fusão dessas linguagens com a
-									riqueza rítmica nordestina resulta em um concerto dinâmico e
-									diferenciado.</p>
-									
-									<p>Em 2016 o grupo vocal CONTRACANTOS foi premiado no Edital FUNCULTURA da FUNDARPE e realizou, 
-									com o patrocínio do Governo do Estado de Pernambuco, uma turnê pelas cidades de Grenoble, Lyon e Paris, na França. 
-									Buscando divulgar a cultura brasileira, em especial a do nordeste do país, preparou para o público francês o 
-									espetáculo POVO BRASILEIRO: CANTOS DO NORDESTE. O concerto foi apresentado também no SESC Escola do Rio de Janeiro, na VIII Mostra Leão do Norte
-									do SESC/PE (Garanhuns), nas comemorações dos 70 anos da
-									UFPE no Teatro de Santa Isabel (Recife), na série Música no
-									Hermilo no Teatro Hermilo Borba Filho (Recife), no VIII Festival Internacional de Música de Campina Grande (FIMUS) e no XXIV Janeiro de Grandes Epetáculos (2018).<	/p>
-
-
+									<p>In 2016 the vocal group CONTRACANTOS earned an accomplishment through the call of the Pernambuco Culture Sponsorship Fund – FUNCULTURA and promoted a tour through the cities of Grenoble, Lyon, and Paris in France. With the purpose of spreading Brazilian culture, specifically the culture of the Northeast of Brazil, POVO BRASILEIRO: CANTOS DO NORDESTE was prepared for the French audience. The concert was presented also in the SESC School of Rio de Janeiro, in the SESC/PE VIII Mostra Leão do Norte (Garanhuns-PE), during the celebration of the 70th anniversary of the Federal University of Pernambuco at the Santa Isabel Theater (Recife), in the concert series Música no Hermilo at Hermilo Borba Filho Theater (Recife), and in the VIII International Music Festival of Campina Grande – FIMUS (Campina Grande-PB).</p>
+									<p>POVO BRASILEIRO: CANTOS DO NORDESTE is a musical concert with scenic elements that presents Brazilian culture through a repertoire of musical works from the Northeast of Brazil, portraying the different values that formed its people. The concert contains vocal and instrumental music, allied with elements of Cordel poetry, body gesture, and rhythms of Pernambuco. The musical is based on Northeast Brazil oral traditions of Aboios, Maracatu’s Toadas, Cirandas, Coco, Caboclinho, Frevo and others.</p> 
+									<p>The performance reflects four moments in Northeast Brazil’s history, life, and music: The Armorial movement; beach chants; African-Brazilian chants; and the Carnival of Pernambuco. POVO BRASILEIRO: CANTOS DO NORDESTE exposes a picture of Brazil, using elements from the popular religious culture of the Northeast of Brazil Brincante (a person who plays a role in traditional culture).</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
 
-								<!--<div id="datas" class="name">Datas</div>
-								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>
-								<div class="portfolio-text">
-									<!--<i> - BRASIL 2016 - </i>
-									<p>
-									<b>Recife</b><br>
-									03/05 - Hospital das Clínicas - 14h<br>
-									17/05 - Escola João Pernambuco (Miniauditório) - 15h<br>
-									31/05 - Instituto dos Cegos - 15h<br>
-									</p>
-
-									<i> - FRANÇA 2016 - </i>
-									<p>
-									<b>Grenoble</b><br>
-									18/06 - Espace Paul Jargot, en Crolles - 20h<br>
-									19/06 - St-Hugues de Chartreuse - 18h<br>
-									23/06 - Espace Claretière Fontanil - 20h<br>
-
-									<b>Lyon</b><br>
-									24/06 - Temple du Change - 20h<br>
-
-									<b>Paris</b><br>
-									01/07 - Église Saint Merry - 18h<br>
-									</p>
-									
-									<i> - BRASIL 2016 - </i>
-									<p>
-									<b>Recife</b><br>
-									<!--02/08 - Escola João Pernambuco - 15h<br>-- >
-									09/08 - Associação Pernambucana de Cegos (APEC)<br>
-									14/08 - Teatro Santa Isabel<br>
-									16/08 - Hospital das Clínicas<br>
-									</p>
-									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
-								</div>-->
-
-								<div id="grupos" class="name">Os Grupos</div>
+								<div id="grupos" class="name">The Ensembles</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
 								<div class="portfolio-text">
-									<p>O grupo vocal CONTRACANTOS, foi criado em 2002 pelo maestro e professor da Universidade Federal de Pernambuco, Flávio Medeiros, e durante os anos seguintes se tornou um dos principais grupos vocais do Nordeste brasileiro realizando concertos pelo país e pelo exterior (França, Suíça e Estados Unidos).
-									</p>
-									<p>O grupo transita por repertórios variados que vão do erudito ao popular, em concertos a cappella ou acompanhados por orquestras sinfônicas ou grupos de câmara. Realizou entre 2002 e 2014, inúmeros concertos em teatros, igrejas e escolas, do Nordeste. Participou de importantes Festivais como o Lotus World Music & Arts Festival (EUA), MIMO (Mostra Internacional de música de Olinda), o Virtuosi Internacional, o Virtuosi Brasil e o Virtuosi na Serra. Realizou participações especiais nos CDS da Orquestra Sinfônica do Recife, do grupo Sagrama, da Orquestra Sinfônica Virtuosi e da Universidade Federal de Pernambuco. Desde sua formação, o CONTRACANTOS valoriza o repertório de música nordestina, apresentando composições originais e arranjos de importantes músicos brasileiros.
-									</p>
-									<p>O grupo instrumental CONTRAVENTOS foi criado em 2013, por músicos atuantes no cenário musical pernambucano, com formação erudita e popular, para atuar junto ao grupo CONTRACANTOS. Sua formação instrumental, com Flauta Transversa, Clarinete, Trompa, Clarone e Percussão, possibilita novas combinações e texturas sonoras, fomentando a pesquisa, composição e criação de arranjos da música nordestina.
-									</p>
+									<p>CONTRACANTOS was created in 2002 by choir conductor and professor at Federal University of Pernambuco, Flávio Medeiros. It has become one of the prominent vocal groups in the Northeast of Brazil. CONTRACANTOS has been giving concerts in theaters, churches, schools and cultural spaces, presenting in cities of Pernambuco as well as in other states of the country and outside Brazil in France, Switzerland, and United States. The choir has performed at festivals such as the Lotus World Music & Arts Festival (USA), La Fête de la Musique (France), in Pernambuco, Mostra Leão do Norte, Mostra Internacional de Música em Olinda, and the Virtuosi Internacional, Virtuosi Brasil and Virtuosi na Serra. The choir was featured on CD recordings with the Symphonic Orchestra of Recife, the group Sagrama, the Symphonic Orchestra Virtuosi, and the Federal University of Pernambuco Orchestra.</p>
+									<p>The group performs varied repertoire, from the classic to the popular, in concerts a capella as well as accompanied by orchestras or chamber groups, conducted by Flávio Medeiros and by invited Brazilian conductors such as Osman Gioia, Sílvio Barbato, José Renato Accioly, Dierson Torres, and Maria Aida Barroso, as well as foreign conductors Frank Abrahams (USA), Erick Westberg (Sweden), Christèle Rifaux (France), and Monica Alfaya (Argentina).</p>
+									<p>CONTRAVENTOS is the instrumental sextet made-up of musicians with backgrounds in classic and popular music. The group was created in 2013 to perform with CONTRACANTOS and is composed of flute, clarinet, bass-clarinet, horn, and percussion. It includes also traditional instruments of the Northeast of Brazil like the pifano, the berrante, the viola nordestina and the sanfona. This instrumentation allows new combinations and sounds, producing research, creation, and composition of new arrangements.</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
 
-
-								<div id="agradecimentos" class="name">Agradecimentos</div>
+								<div id="ficha-tecnica" class="name">Production Staff</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
 								<div class="portfolio-text">
-									<p>Mauro Maibrada, Florisbela Campos, Ana Júlia de Souza Melo, Jean Tessier,  Isaac Souza, Gilberto Santos Filho, Bruno Mota, Rodrigo Costa, Juliana Bruder Costa, Marc e Martine Chaumaz, Christele Rifaux, Didier Verdeille, Doloro Olive, Claudia Ângela Vilela de Almeida, Abraão de Barros Marreira, José Diniz Júnior, Antônio Muniz da Silva, ao Departamento de Música da UFPE e a equipe do FUNCULTURA.
-									</p>
-									<p>Agradecimento Especial ao nosso querido tenor Jadiel Gomes.</p>
-									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
-								</div>
-
-								<div id="ficha-tecnica" class="name">Ficha Técnica</div>
-								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
-								<div class="portfolio-text">
-									<p><b>Direção Musical e Regência</b> Flávio Medeiros <br>
-										<b>Concepção e Roteiro</b> Flávio Medeiros e Luiz Kleber Queiroz <br>
-										<b>Direção Cênica</b> Luiz Kleber Queiroz <br>
-										<b>Preparação Rítmico-Corporal</b> Maria Aida Barroso <br>
-										<b>Figurinos e Adereços</b> Marcondes Lima <br>
-										<b>Design Gráﬁco</b> Letícia Matos <br>
-										<b>Fotograﬁa</b> Renata Victor <br>
-										<b>Produção</b> Guilherme Jacobsen, Lúcia Helena Cysneiros, Matheus Soares, Mariane Mariz e Tainá Menezes <br>
+									<p><b>Music Director</b> Flávio Medeiros <br>
+										<b>Script by</b> Flávio Medeiros and Luiz Kleber Queiroz <br>
+										<b>Staging</b> Luiz Kleber Queiroz <br>
+										<b>Body Percussion Coach</b> Maria Aida Barroso <br>
+										<b>Costume Designer</b> Marcondes Lima <br>
+										<b>Program Designer</b> Letícia Matos <br>
+										<b>Photos by</b> Renata Victor <br>
+										<b>Production</b> Guilherme Jacobsen, Lúcia Helena Cysneiros, Matheus Soares, Mariane Mariz and Tainá Menezes <br>
 										<!--<b>Produção em viagem</b> Aymara Almeida Santos de Souza -->
 									</p>
 									<p>
-										<b>Incentivo / Patrocínio </b>
-										Funcultura,
-										Fundarpe,
-										Secretaria de Cultura,
-										Governo do Estado de Pernambuco
-										<br>
-										<b>Apoio</b>
-										UFPE,
-										Centro de Artes e Comunicação/Departamento de Música,
+										<b>Support</b>
+										UFPE, Centro de Artes e Comunicação/Departamento de Música,
 										Centro de Convenções da UFPE
-
 									</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
 
-								<div id="galeria" class="name">Galeria</div>
+								<div id="galeria" class="name">Gallery</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
 								<div class="portfolio-text">
-									<p>Clique <a href="gallery.html#filter-povo-brasileiro-grenoble">aqui</a> para acessar a galeria de foto do espetáculo.
+									<p>Click <a href="gallery.html#filter-povo-brasileiro-grenoble">here</a> to access our photo gallery.
 									</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
 
-								<div id="clipagem" class="name">Clipagem</div>
+								<div id="clipagem" class="name">Clipping</div>
 								<div class="portfolio-text">
 									<div>
-									Matéria RFI Brasil <br>
+									RFI Brasil <br>
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/akWri7-hOYM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</div>
 
 									<div>
-									Matéria TVU<br>
+									TVU<br>
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/TBDeNCgVk6g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</div>
 
 									<div>
-									Matéria FIMUS 2017<br>
+									FIMUS 2017<br>
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/7Oa9z0ojTdc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</div>
 
