--- a/staff.html
+++ b/staff.html
@@ -234,18 +234,6 @@
 										</div>
 									</li>
 									<li>
-										<img src="img/douglas.jpg" alt="Pic" />
-										<div class="information">
-											<div class="header">
-												<div class="name">Douglas Araújo</div>
-												<div class="contact">Barítono</div>
-											</div>
-											<div>
-												<p>Natural de Olinda, Iniciou seus estudos no Conservatório Pernambucano de Musica, tendo aulas de canto erudito com a Profa. Rosimary Carlos. Estudou Piano no Centro Musical de Olinda com a Profa. Dayse Gomes. Desenvolveu atividades como regente de Coro na Igreja Ass de Deus no bairro de Rio Doce. Integrante dos principais Coros de Recife dentre eles, Coro Sinfonico STBNB, Coro de Câmara do Conservatório Pernambucano de Música , Opus 2, Contracantos e também do Grupo Txaimus. Em 2018 participou da II Oficina de Canto Lírico de Recife com os Professores Dr. Marcelo Ferreira e Dr. Vitor Philomeno. Participou como Coristas nas obras: Missa da coroação de Mozart, Missa Nordestina de Clovis Pereira, Te Deum Dvorak, As Três Parábolas de Dierson Torres, Oratório de Noël de Camille Saint-Saëns e Na Ópera Carmen de Georges Bizet com a Academia de Ópera e Repertório. Atualmente, Licenciando em Música pela Universidade Federal de Pernambuco.</p>
-											</div>
-										</div>
-									</li>
-									<li>
 										<img src="img/eudes.png" alt="Pic" />
 										<div class="information">
 											<div class="header">
@@ -337,6 +325,17 @@
 											</div>
 										</div>
 									</li>
+									<li>
+										<img src="img/douglas.jpg" alt="Pic" />
+										<div class="information">
+											<div class="header">
+												<div class="name">Douglas Araújo</div>
+												<div class="contact">Barítono</div>
+											</div>
+											<div>
+												<p>Natural de Olinda, Iniciou seus estudos no Conservatório Pernambucano de Musica, tendo aulas de canto erudito com a Profa. Rosimary Carlos. Estudou Piano no Centro Musical de Olinda com a Profa. Dayse Gomes. Desenvolveu atividades como regente de Coro na Igreja Assembleia de Deus no bairro de Rio Doce. Integrante dos principais Coros de Recife dentre eles, Coro Sinfonico STBNB, Coro de Câmara do Conservatório Pernambucano de Música , Opus 2, Contracantos e também do Grupo Txaimus. Em 2018 participou da II Oficina de Canto Lírico de Recife com os Professores Dr. Marcelo Ferreira e Dr. Vitor Philomeno. Participou como Coristas nas obras: Missa da coroação de Mozart, Missa Nordestina de Clovis Pereira, Te Deum Dvorak, As Três Parábolas de Dierson Torres, Oratório de Noël de Camille Saint-Saëns e Na Ópera Carmen de Georges Bizet com a Academia de Ópera e Repertório. Atualmente, Licenciando em Música pela Universidade Federal de Pernambuco.</p>
+											</div>
+										</div>
 									</li>
 									<li>
 										<img src="img/matheus.png" alt="Pic" />
@@ -429,6 +428,19 @@
 											</div>
 											<div>
 												<p> Atriz e cantora pernambucana é estudante de canto erudito pelo Conservatório Pernambucano de Música. Como atriz, participou da ópera A flauta mágica em (2012), Obsessão em 4 atos (2013), Cordel do amor sem fim e O rei leão (2015) Foi premiada como melhor atriz na modalidade escola de teatro pelo FETEAG- 2014 (Festival de Teatro do Agreste). É componente do coro Opus 2 e recentemente o coro Contracantos ambos regidos por FLavio Medeiros. Desde 2013 compõe a trupe do Baile do menino Deus de Ronaldo Correia de Brito. É integrante do grupo Voz Nagô que participa da abertura do Carnaval do Recife desde 2013 com o percussionista Naná Vasconcelos. É graduada em letras pela FAINTVISA e especialista em Cultura Pernambucana pela FAFIRE.
+												</p>
+											</div>
+										</div>
+									</li>
+									<li>
+										<img src="img/vanessa.jpg" alt="Pic" />
+										<div class="information">
+											<div class="header">
+												<div class="name">Vanessa de Melo Lacerda</div>
+												<div class="contact">Soprano</div>
+											</div>
+											<div>
+												<p>A soprano recifense Vanessa de Melo Lacerda teve aos sete anos de idade seu primeiro contato com o mundo da música. Fez parte do coral infantil do Colégio Marista São Luis, sendo integrante até o final do ensino fundamental, e lá teve aulas de flauta com o professor Deneil Laranjeira, seu primeiro maestro. Estudou piano durante três anos na escola de música BL, com Valdetaim do Monte, Miguel Iago Cavalcanti, e Diego Drão. Enquanto cursava Direito na Universidade Católica de Pernambuco, teve contato com o coral da instituição, o Madrigal Lindbergh Pires, sob a regência do maestro Jadson Oliveira e o acompanhamento do pianista Alison Queiroz. Ingressou no madrigal no ano de 2014 e lá permanece até os dias atuais, sendo solista de inúmeros recitais e assim, tendo um horário semanal para correpetições com o pianista e receber orientações do maestro. Em 2015, dá início ao curso de iniciação musical no Conservatório Pernambucano de Música, onde hoje está fazendo o curso técnico de canto erudito sob a orientação da professora Rosemary Carlos, grande soprano pernambucana. Foi recentemente convidada pelo maestro Flávio Medeiros, em 2018, para fazer parte do coral Contracantos, importante grupo musical da UFPE. A soprano recifense recebe também o apoio do barítono Miguelangelo Cavalcanti, residente da Ópera de Praga, que vem constantemente a Recife realizar Master classes e aulas particulares para os estudantes da região. Conta também com a formação em alguns idiomas: inglês fluente, alemão e italiano básico e recentemente ingressou no curso de francês.
 												</p>
 											</div>
 										</div>
