Trocando a foto de Vanessa e tirando Fábia da foto

--- a/portfolio-cantos-trabalho.html
+++ b/portfolio-cantos-trabalho.html
@@ -154,9 +154,11 @@
 						<a href="portfolio.html" class="link-button"><span>GO BACK TO PORTFOLIO</span></a>-->
 					</div>
 					<!-- ENDS title -->
-					<i>Foto de Ensaio</i>
-					<img src="img/gallery/cantos-trabalho-ensaio/capa.jpg" alt="Thumb" class="portfolio-image"/>
-
+					<div style="padding-left: 35px">
+						<i>Foto de Ensaio</i>
+						<img src="img/gallery/cantos-trabalho-ensaio/capa.jpg" alt="Thumb" class="portfolio-image" style="width: 930px" />	
+					</div>
+					
 					<!-- page-content -->
 					<div class="page-content">
 
