Adicionando mário no staff

--- a/staff.html
+++ b/staff.html
@@ -333,7 +333,7 @@
 												<div class="contact">Barítono</div>
 											</div>
 											<div>
-												<p>Natural de Olinda, Iniciou seus estudos no Conservatório Pernambucano de Musica, tendo aulas de canto erudito com a Profa. Rosimary Carlos. Estudou Piano no Centro Musical de Olinda com a Profa. Dayse Gomes. Desenvolveu atividades como regente de Coro na Igreja Assembleia de Deus no bairro de Rio Doce. Integrante dos principais Coros de Recife dentre eles, Coro Sinfonico STBNB, Coro de Câmara do Conservatório Pernambucano de Música , Opus 2, Contracantos e também do Grupo Txaimus. Em 2018 participou da II Oficina de Canto Lírico de Recife com os Professores Dr. Marcelo Ferreira e Dr. Vitor Philomeno. Participou como Coristas nas obras: Missa da coroação de Mozart, Missa Nordestina de Clovis Pereira, Te Deum Dvorak, As Três Parábolas de Dierson Torres, Oratório de Noël de Camille Saint-Saëns e Na Ópera Carmen de Georges Bizet com a Academia de Ópera e Repertório. Atualmente, Licenciando em Música pela Universidade Federal de Pernambuco.</p>
+												<p>Natural de Olinda, Iniciou seus estudos no Conservatório Pernambucano de Musica, tendo aulas de canto erudito com a Profa. Rosimary Carlos. Estudou Piano no Centro Musical de Olinda com a Profa. Dayse Gomes. Desenvolveu atividades como regente de Coro na Igreja Assembleia de Deus no bairro de Rio Doce. Integrante dos principais Coros de Recife dentre eles, Coro Sinfonico STBNB, Coro de Câmara do Conservatório Pernambucano de Música, Opus 2, Contracantos e também do Grupo Txaimus. Em 2018 participou da II Oficina de Canto Lírico de Recife com os Professores Dr. Marcelo Ferreira e Dr. Vitor Philomeno. Participou como Coristas nas obras: Missa da coroação de Mozart, Missa Nordestina de Clovis Pereira, Te Deum Dvorak, As Três Parábolas de Dierson Torres, Oratório de Noël de Camille Saint-Saëns e Na Ópera Carmen de Georges Bizet com a Academia de Ópera e Repertório. Atualmente, Licenciando em Música pela Universidade Federal de Pernambuco.</p>
 											</div>
 										</div>
 									</li>
@@ -387,6 +387,19 @@
 											<div>
 												<p> é natural de Recife, graduado pela UFPE nos cursos de Licenciatura em Música e Bacharelado em Canto, sob a orientação da profª Márcia Rangel. Participou de Master Classe de canto com Ilem Vargas (RJ), Pedro Couri (MG), Adélia Issa (SP), Antonio Salgado (Portugal) e Karine Serafim (França). Foi orientador nas oficinas de canto à convite da UEBA na cidade de Paulo Afonso. Apresentou-se como solista em diversos concertos junto à Orquestra Sinfônica do Recife, na Sinfonia nº 09 de Beethoven, no Oratório Messias de Handel, Enéas na ópera Dido e Enéas de Henry Purcell, no Réquiem e Don Otávio na ópera Don Giovanni de Mozart. Foi solista da Missa de Puccini no Projeto Salão Nobre do Teatro de Santa Isabel em agosto de 2007. Sob a regência de Flávio Medeiros, foi solista da “Missa de Glória” de Puccini, da cantata profana de Carmina Burana de Carl Orff. Participou do 19º festival Internacional de Música Antiga e Colonial Brasileira (Juiz de Fora/MG) sendo solista no seu encerramento com o Réquiem do Pe. José Maurício Nunes Garcia, sob a regência de Sérgio Dias. Realizou uma turnê na França na cidade de Grenoble e Paris em maio de 2003 e nos Estados Unidos da América em 2006, junto com o grupo Contracantos da UFPE. Foi professor de música do Seminário de Educação Cristã – SEC. Como professor substituto de música na UFPE, lecionou nas áreas de Canto, Canto Coral, Técnica Vocal, Regência de Coro, além de solista do Coro de Câmara Barroca da mesma instituição. Atualmente é professor de música na Escola Técnica Estadual de Criatividade Musical nas áreas de Classe de Canto, Canto Coral, Fisiologia da Voz, Fonética, Solfejo, Instrumento Auxiliar e Iniciação ao Piano, atuando também como Correpetidor.
 
+												</p>
+											</div>
+										</div>
+									</li>
+<li>
+										<img src="img/mario.jpg" alt="Pic" />
+										<div class="information">
+											<div class="header">
+												<div class="name">Mário Monteiro</div>
+												<div class="contact">Tenor</div>
+											</div>
+											<div>
+												<p>Natural do Recife, iniciou seu primeiro contato com a música ainda criança, na igreja católica. Mais a frente, no período escolar, começou a vivenciar aulas de canto coral e técnica vocal, ministradas pelo Prof. André Arruda. Em 2013  tornou-se integrante do coro Universitário da UFPE e em 2014 do coro Opus2, ambos regidos pelo professor Flávio Medeiros. Participou de varias apresentações como: A Nona Sinfonia de Beethoven, Carmina Burana e Fantasia coral de Beethoven. Deu continuidade ao seus estudos no Conservatório  Pernambucano de Música, onde estudou canto erudito, sob orientação da professora Rosemary Carlos. Em 2016 fez uma participação especial no grupo Contracantos  em  Um RÉQUIEM nordestino, sob composição e regência de Dierson Torres. No ano seguinte foi convidado a fazer parte do Grupo Contracantos, onde veio a participar do espetáculo 'Povo Brasileiro: Cantos do Nordeste' e de peças como o Moteto de Bach BWV 227 ' Jesu meine Freud'  e As três Parábolas de  Dierson Torres. Atualmente é graduando do curso de Enfermagem e também ministra aulas de canto coral e teatro para crianças e adolescentes em escola de pedagogia Waldorf.
 												</p>
 											</div>
 										</div>
