Finalizando versão francesa da página dos cantos de trabalho

--- a/portfolio-cantos-trabalho-fr.html
+++ b/portfolio-cantos-trabalho-fr.html
@@ -265,11 +265,10 @@ Les gens de ma confiance me sourient”
 
 								<div id="grupos" class="name">Les Groupes</div>
 								<div class="portfolio-text">
-									<p>O grupo vocal CONTRACANTOS, foi criado em 2002 pelo maestro e professor da Universidade Federal de Pernambuco, Flávio Medeiros, e durante os anos seguintes se tornou um dos principais grupos vocais do Nordeste brasileiro realizando concertos pelo país e pelo exterior (França, Suíça e Estados Unidos).
+									<p>Le groupe CONTRACANTOS a été crée em 2002 par le chef d'orquestre et professeur de l'Université Fédérale du Pernambuco, Flávio Medeiros, et au fil des années est devenu un des principaux groupe vocaux du nordeste brésilien réalisant des concerts dans tout le pays et à l'étranger (France, Suisse et Etats-unis) 
 									</p>
-									<p>O grupo transita por repertórios variados que vão do erudito ao popular, em concertos a cappella ou acompanhados por orquestras sinfônicas ou grupos de câmara. Realizou entre 2002 e 2014, inúmeros concertos em teatros, igrejas e escolas, do Nordeste. Participou de importantes Festivais como o Lotus World Music & Arts Festival (EUA), MIMO (Mostra Internacional de música de Olinda), o Virtuosi Internacional, o Virtuosi Brasil e o Virtuosi na Serra. Realizou participações especiais nos CDS da Orquestra Sinfônica do Recife, do grupo Sagrama, da Orquestra Sinfônica Virtuosi e da Universidade Federal de Pernambuco. Desde sua formação, o CONTRACANTOS valoriza o repertório de música nordestina, apresentando composições originais e arranjos de importantes músicos brasileiros.
-									</p>
-									<p>O grupo instrumental CONTRAVENTOS foi criado em 2013, por músicos atuantes no cenário musical pernambucano, com formação erudita e popular, para atuar junto ao grupo CONTRACANTOS. Sua formação instrumental, com Flauta Transversa, Clarinete, Trompa, Clarone, Percussão, Rabeca, Violão, Viola da Gamba e Teclado, possibilita novas combinações e texturas sonoras, fomentando a pesquisa, composição e criação de arranjos da música nordestina.
+									<p>Le groupe passe par des répertoire variés qui vont de l'érudit au populaire, dans des concerts a capella ou accompagnés par des orquestres synphoniques ou des groupe de musique de chambre. Le groupe a réalisé entre 2002 et 2014, de très nombreux concerts dans des théatres, églises et écoles, du nordeste. Il a participé à des festivals, comme o Lotus World Music & Arts Festival (EUA), Festival International de Musique de Olinda, et des Virtuosi internationales, Brésil et à Serra. Il a participé des CDs de l'Orquestre Symphonique de Recife, du groupe Sagrama, de l'Orquestre Symphonique Virtuosi et de l'Université Fedérale du Pernambuco. CONTRACANTOS cherche à valoriser le répertoire des musiques nordestines brésilienne, en présentant des compositions orginales et des arrangements de musiciens brésiliens.</p>
+									<p>L’ensemble instrumentale CONTRAVENTOS a été crée em 2013, par des musiciens acteurs de la scence musicale du Pernambuco, avec une formation érudite et populaire, pour jouer avec le groupe CONTRACANTOS. Sa formation instrumentale rend possible de nouvelles combinations et textures sonores, enrichissant la recherche, la composition et la création d'arrangements de la musique nordestine.
 									</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
@@ -277,17 +276,17 @@ Les gens de ma confiance me sourient”
 								<div id="ficha-tecnica" class="name">Fiche Technique</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
 								<div class="portfolio-text">
-									<p><b>Direção Musical e Regência</b> Flávio Medeiros <br>
-										<b>Concepção e Roteiro</b> Flávio Medeiros e Luiz Kleber Queiroz <br>
-										<b>Direção Cênica</b> Luiz Kleber Queiroz <br>
-										<b>Composição e Arranjos</b> Lúcia Helena Cysneiros <br>
-										<b>Preparação Corporal e Atriz Convidada</b> Pollyanna Monteiro<br>
-										<b>Figurinos e Adereços</b> Marcondes Lima <br>
-										<b>Produção</b> Guilherme Jacobsen, Lúcia Helena Cysneiros, Matheus Soares, Maria Aida Barroso, Mariane Mariz e Tainá Menezes <br>
+									<p><b>Direction Musicale et Conduction</b> Flávio Medeiros <br>
+										<b>Conception et Scénario</b> Flávio Medeiros et Luiz Kleber Queiroz <br>
+										<b>Direction scénique</b> Luiz Kleber Queiroz <br>
+										<b>Composition et Arrangements</b> Lúcia Helena Cysneiros <br>
+										<b>Préparation corporelle e Actrice Invitée</b> Pollyanna Monteiro<br>
+										<b>Accessoires</b> Marcondes Lima <br>
+										<b>Production</b> Guilherme Jacobsen, Lúcia Helena Cysneiros, Matheus Soares, Maria Aida Barroso, Mariane Mariz et Tainá Menezes <br>
 										<!--<b>Produção em viagem</b> Aymara Almeida Santos de Souza -->
 									</p>
 									<p>
-										<b>Apoio</b>
+										<b>Soutenance</b>
 										UFPE, Centro de Artes e Comunicação/Departamento de Música
 									</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
