Adicionando programa em frances do povo brasileiro

--- a/portfolio-povo-brasileiro-en.html
+++ b/portfolio-povo-brasileiro-en.html
@@ -193,6 +193,7 @@
 									<!--<li><a href="#datas">Datas</a></li>-->
 									<li><a href="#grupos">The Ensembles</a></li>
 									<li><a href="#ficha-tecnica">Production Staff</a></li>
+									<li><a href="#programa">Programme</a></li>
 									<li><a href="#galeria">Gallery</a></li>
 									<li><a href="#clipagem">Clipping</a></li>
 								</ul>
@@ -238,6 +239,14 @@
 										<b>Support</b>
 										UFPE, Centro de Artes e Comunicação/Departamento de Música,
 										Centro de Convenções da UFPE
+									</p>
+									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
+								</div>
+
+								<div id="programa" class="name">Programme</div>
+								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
+								<div class="portfolio-text">
+									<p>Click <a href="files/programa-povo-brasileiro-fr.pdf" target="_blank">here</a> to download the 2016 tour programme in french.
 									</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
