--- a/portfolio-povo-brasileiro.html
+++ b/portfolio-povo-brasileiro.html
@@ -194,6 +194,7 @@
 									<li><a href="#grupos">Os Grupos</a></li>
 									<li><a href="#agradecimentos">Agradecimentos</a></li>
 									<li><a href="#ficha-tecnica">Ficha Técnica</a></li>
+									<li><a href="#programa">Programa</a></li>
 									<li><a href="#galeria">Galeria</a></li>
 									<li><a href="#clipagem">Clipagem</a></li>
 								</ul>
@@ -250,7 +251,7 @@
 									espetáculo POVO BRASILEIRO: CANTOS DO NORDESTE. O concerto foi apresentado também no SESC Escola do Rio de Janeiro, na VIII Mostra Leão do Norte
 									do SESC/PE (Garanhuns), nas comemorações dos 70 anos da
 									UFPE no Teatro de Santa Isabel (Recife), na série Música no
-									Hermilo no Teatro Hermilo Borba Filho (Recife), no VIII Festival Internacional de Música de Campina Grande (FIMUS) e no XXIV Janeiro de Grandes Epetáculos (2018).<	/p>
+									Hermilo no Teatro Hermilo Borba Filho (Recife), no VIII Festival Internacional de Música de Campina Grande (FIMUS) e no XXIV Janeiro de Grandes Epetáculos (2018).</p>
 
 
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
@@ -339,6 +340,14 @@
 										Centro de Artes e Comunicação/Departamento de Música,
 										Centro de Convenções da UFPE
 
+									</p>
+									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
+								</div>,
+
+								<div id="programa" class="name">Programa</div>
+								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
+								<div class="portfolio-text">
+									<p>Clique <a href="files/programa-povo-brasileiro-fr.pdf" target="_blank">aqui</a> para baixar o programa em francês da turnê realizada em 2016.
 									</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
