--- a/staff.html
+++ b/staff.html
@@ -634,6 +634,28 @@
 										</li>
 										</div>
 								</div>
+
+								<h5 class="toggle-trigger custom"><a href="#">Convidados</a></h5>
+								<div class="toggle-container">
+							    <div class="block">
+								<li>
+										<img src="img/polly.jpg" alt="Pic" />
+										<div class="information">
+											<div class="header">
+												<div class="name">Pollyanna Monteiro</div>
+												<div class="contact">Atriz e Preparadora Corporal</div>
+											</div>
+											<div>
+												<p> Aos três anos entrou na Escola de Ballet Valdete Cezar e aí fez sua formação em ballet clássico- Método Vaganova. Aulas de piano clássico, dança moderna- Métodos José Limón/ Lester Horton, canto lírico, capoeira e voz e movimento. Formação em dança contemporânea, ênfase em dança- teatro e butoh (com Tadashi Endo). Formação em teatro, atuando principalmente em: improvisação- Método DIG, palhaço, bufão e pantomima. Graduada em fisioterapia pela UFPE, com pesquisas em arte-terapia e ergonomia. Pós- graduada em Mat Pilates e Pilates Clássico em aparelhos. Desde 2000 é atriz, bailarina, performer, preparadora corporal, dramaturgista, coreógrafa e diretora da Cia. de Teatro e Dança d’Improvizzo Gang (DIG), fundada por Paulo Michelotto, considerada pelo The America´s Society, como um dos mais importantes grupos dos anos 90 no Brasil, pelo seu caráter social. Com o DIG ministra oficinas e participa de espetáculos em festivais nacionais e internacionais. Turnês por Manaus, Rio, Congonhas, Natal, João Pessoa, Metz, Paris, Quito, Bogotá, Sogamoso, Maracay e Nova Iorque. Soprano dos Coros Universitário e Opus 2, regidos por Flávio Medeiros. Instrutora de Pilates e fisioterapeuta no Studio Pollyanna Monteiro. Preparadora corporal e professora de dança convidada de grupos e festivais culturais. É profundamente grata a todos seus mestres.</p>
+											</div>
+										</div>
+									</li>
+
+
+
+								</div>
+							</div>
+
 							</h5>
 						</div>
 
